try to get correct argocd host

--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -4,6 +4,7 @@ server:
   service:
     port: 80
   ingress:
+    name: argocd-ingress
     enabled: true
     annotations:
       kubernetes.io/ingress.class: "nginx"
