--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -3,6 +3,27 @@ server:
   enableSSL: false
   service:
     port: 80
+  ingress:
+    name: argocd-ingress
+    enabled: true
+    annotations:
+      kubernetes.io/ingress.class: "nginx"
+      cert-manager.io/cluster-issuer: "letsencrypt-prod"
+      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    tls:                      
+      - hosts:
+          - argocd.dataplumbers.ch
+        secretName: argocd-tls-secret
+    hosts:                      
+      - host: argocd.dataplumbers.ch
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: argocd-server
+                port:
+                  number: 80
 configs:
   rbac:
     policy.csv: |
