test new argocd configs

--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -2,11 +2,26 @@ global:
   domain: argocd.dataplumbers.ch
 server:
   # Disable SSL to allow to configure TLS connection on the ingress
-  insecure: false
+  insecure: true
   service:
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-prod
       nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+      
+ingress:
+    enabled: true
+    controller: generic
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    ingressClassName: "nginx"
+    hostname: "argocd.dataplumbers.ch"
+    tls: 
+      - hosts:
+          - "argocd.dataplumbers.ch"
+        secretName: argocd-tls
+    path: /
+  
 configs:
   rbac:
     policy.csv: |
