--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -2,7 +2,7 @@ global:
   domain: argocd.dataplumbers.ch
 server:
   # Disable SSL to allow to configure TLS connection on the ingress
-  insecure: true
+  insecure: false
   service:
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-prod
