test new argocd configs

--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -2,7 +2,7 @@ global:
   domain: argocd.dataplumbers.ch
 server:
   # Disable SSL to allow to configure TLS connection on the ingress
-  insecure: false
+  insecure: true
   service:
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-prod
@@ -13,7 +13,6 @@ server:
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-prod
         nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-        nginx.ingress.kubernetes.io/ssl-passthrough: "true"
       ingressClassName: "nginx"
       hostname: "argocd.dataplumbers.ch"
       tls: 
@@ -21,6 +20,12 @@ server:
             - "argocd.dataplumbers.ch"
           secretName: argocd-tls
       path: /
+      pathType: Prefix
+      backend:
+        service:
+          name: argocd-server
+          port:
+            number: 80 
   
 configs:
   rbac:
