--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -36,13 +36,26 @@ configs:
           name: Infomaniak
           config:
             issuer: https://login.infomaniak.com
-            clientID: $infomaniak-argocd-oauth-credentials:clientID
-            clientSecret: $infomaniak-argocd-oauth-credentials:secret
+            clientID: #INFOMANIAK_CLIENT_ID
+            clientSecret: #INFOMANIAK_CLIENT_SECRET
             redirectURI: https://argocd.dataplumbers.ch/api/dex/callback
             scopes:
               - openid
               - profile
               - email
           insecureSkipVerify: false
+dex:
+  enabled: true
+  env:
+    - name: INFOMANIAK_CLIENT_ID
+      valueFrom:
+        secretKeyRef:
+          name: infomaniak-argocd-oauth-credentials
+          key: clientID
+    - name: INFOMANIAK_CLIENT_SECRET
+      valueFrom:
+        secretKeyRef:
+          name: infomaniak-argocd-oauth-credentials
+          key: secret
           
 
