--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -22,13 +22,35 @@ server:
             - "argocd.dataplumbers.ch"
           secretName: argocd-server-tls
       path: /
+
+configs:
+  params:
+    rbac:
+    
+      policy.default: 'role:readonly'
+
+      # -- File containing user-defined policies and role definitions.
+      # @default -- `''` (See [values.yaml])
+      policy.csv: |
+        g, jan.matter@dataplumbers.ch, role:admin
+
+      scopes: "[groups]"
+
+      policy.matchMode: "glob"
   
 configs:
   params:
     rbac:
       policy.csv: |
-        g, jan.matter@dataplumbers.ch, role:admin
+        p, role:org-admin, applications, *, */*, allow
+        p, role:org-admin, clusters, get, *, allow
+        p, role:org-admin, repositories, *, *, allow
+        p, role:org-admin, logs, get, *, allow
+        p, role:org-admin, exec, create, */*, allow
+        g, jan.matter@dataplumbers.ch, role:org-admin
       policy.default: role:readonly
+      scopes: "[groups]"
+      policy.matchMode: "glob"
   cm:
     dex.config: |
       connectors:
