--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -46,11 +46,7 @@ configs:
             clientID: $INFOMANIAK_CLIENT_ID
             clientSecret: $INFOMANIAK_CLIENT_SECRET
             redirectURI: https://argocd.dataplumbers.ch/api/dex/callback
-            scopes:
-              - openid
-              - profile
-              - email
-              - groups
+            scopes: "[openid, profile, email, groups]"
           insecureSkipVerify: false
 dex:
   enabled: true
