--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -33,7 +33,7 @@ configs:
         p, role:org-admin, exec, create, */*, allow
         g, jan.matter@dataplumbers.ch, role:org-admin
       policy.default: role:readonly
-      scopes: "[groups]"
+      scopes: "[openid, profile, email, groups]"
       policy.matchMode: "glob"
   cm:
     dex.config: |
@@ -45,9 +45,11 @@ configs:
             issuer: https://login.infomaniak.com
             clientID: $INFOMANIAK_CLIENT_ID
             clientSecret: $INFOMANIAK_CLIENT_SECRET
-            redirectURI: https://argocd.dataplumbers.ch/auth/callback
-            scopes: "[openid, profile, email, groups]"
-          insecureSkipVerify: true
+            redirectURI: https://argocd.example.com/api/dex/callback
+            scopes:
+            - openid
+            - profile
+            - email
 dex:
   enabled: true
   env:
