--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -54,5 +54,6 @@ configs:
 dex:
   enabled: true
   envFrom:
-    - name: infomaniak-argocd-oauth-credentials
+    - secretRef:
+        name: infomaniak-argocd-oauth-credentials
 
