--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -43,17 +43,11 @@ configs:
           name: Infomaniak
           config:
             issuer: https://login.infomaniak.com
-            clientID: $clientID
-            clientSecret: $secret
+            clientID: $infomaniak-argocd-oauth-credentials:clientID
+            clientSecret: $infomaniak-argocd-oauth-credentials:secret
             redirectURI: https://argocd.example.com/api/dex/callback
             scopes:
             - openid
             - profile
             - email
             - groups
-dex:
-  enabled: true
-  envFrom:
-    - secretRef:
-        name: infomaniak-argocd-oauth-credentials
-
