--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -43,8 +43,8 @@ configs:
           name: Infomaniak
           config:
             issuer: https://login.infomaniak.com
-            clientID: $INFOMANIAK_CLIENT_ID
-            clientSecret: $infomaniak-argocd-oauth-credentials.clientSecret
+            clientID: "$INFOMANIAK_CLIENT_ID"
+            clientSecret: "$INFOMANIAK_CLIENT_SECRET"
             redirectURI: https://argocd.example.com/api/dex/callback
             scopes:
             - openid
@@ -58,3 +58,8 @@ dex:
         secretKeyRef:
           name: infomaniak-argocd-oauth-credentials
           key: clientID
+    - name: INFOMANIAK_CLIENT_SECRET
+      valueFrom:
+        secretKeyRef:
+          name: infomaniak-argocd-oauth-credentials
+          key: clientSecret
