--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -50,6 +50,7 @@ configs:
             - openid
             - profile
             - email
+            userNameKey: first_name
 dex:
   enabled: true
   env:
