--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -50,7 +50,7 @@ configs:
             - openid
             - profile
             - email
-            userNameKey: first_name
+            userNameKey: email
 dex:
   enabled: true
   env:
