--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -33,7 +33,7 @@ configs:
         p, role:org-admin, exec, create, */*, allow
         g, jan.matter@dataplumbers.ch, role:org-admin
       policy.default: role:readonly
-      scopes: "[openid, email]"
+      scopes: "[openid]"
       policy.matchMode: "glob"
   cm:
     dex.config: |
@@ -48,7 +48,6 @@ configs:
             redirectURI: https://argocd.dataplumbers.ch/api/dex/callback
             scopes:
               - openid
-              - email
             userNameKey: sub
 dex:
   enabled: true
