--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -48,6 +48,7 @@ configs:
             redirectURI: https://argocd.dataplumbers.ch/api/dex/callback
             scopes:
               - openid
+            userNameKey: sub
 dex:
   enabled: true
   env:
