--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -33,7 +33,7 @@ configs:
         p, role:org-admin, exec, create, */*, allow
         g, jan.matter@dataplumbers.ch, role:org-admin
       policy.default: role:readonly
-      scopes: "[openid]"
+      scopes: "[email]"
       policy.matchMode: "glob"
   cm:
     dex.config: |
@@ -47,8 +47,7 @@ configs:
             clientSecret: "$INFOMANIAK_CLIENT_SECRET"
             redirectURI: https://argocd.dataplumbers.ch/api/dex/callback
             scopes:
-              - openid
-            userNameKey: sub
+              - email
 dex:
   enabled: true
   env:
