check if admin can be disabled

--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -36,6 +36,7 @@ configs:
       scopes: "[openid]"
       policy.matchMode: "glob"
   cm:
+    admin.enabled: false
     dex.config: |
       connectors:
         - type: oidc
