change oidc settings

--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -50,6 +50,7 @@ configs:
             redirectURI: https://argocd.dataplumbers.ch/api/dex/callback
             scopes:
               - email
+            userNameKey: email
   ssh:
     create: true
     annotations: {}
