deny access for non-defined users

--- a/deployments/kubernetes_controllers/helm_values/argocd.yaml
+++ b/deployments/kubernetes_controllers/helm_values/argocd.yaml
@@ -26,7 +26,7 @@ configs:
   rbac:
     create: true
     annotations: {}
-    policy.default: deny
+    policy.default: ''
     policy.csv: |
       p, role:org-admin, applications, *, */*, allow
       p, role:org-admin, clusters, get, *, allow
